<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/l_local_backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:layout_alignParentTop="true">
        <TextView
            android:id="@+id/tv_local_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_local_backup"
            android:textColor="#95000000"
            android:textSize="50px"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>


        <TextView
            android:id="@+id/btn_local_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_favorite_local_backup"
            android:textSize="45px"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30px"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>


    <View
        android:id="@+id/v_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/l_local_backup"
        android:layout_marginTop="70px"
        android:layout_marginBottom="70px"
        />


    <RelativeLayout
        android:id="@+id/l_local_recovery"
        android:layout_below="@id/v_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_local_recovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_local_recovery"
            android:textColor="#95000000"
            android:textSize="50px"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>


        <TextView
            android:id="@+id/btn_local_recovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_favorite_local_recovery"
            android:textSize="45px"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30px"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

    <View
        android:id="@+id/v_4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/l_local_recovery"
        android:layout_marginTop="70px"
        android:layout_marginBottom="70px"
        />


    <RelativeLayout
        android:id="@+id/l_remote_backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_4">
        <TextView
            android:id="@+id/tv_remote_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_remote_backup"
            android:textColor="#95000000"
            android:textSize="50px"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>


        <TextView
            android:id="@+id/btn_remote_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_favorite_remote_backup"
            android:textSize="45px"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30px"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>



    <View
        android:id="@+id/v_5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/l_remote_backup"
        android:layout_marginTop="70px"
        android:layout_marginBottom="70px"
        />

    <RelativeLayout
        android:id="@+id/l_remote_recovery"
        android:layout_below="@id/v_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50px">
        <TextView
            android:id="@+id/tv_remote_recovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_remote_recovery"
            android:textColor="#95000000"
            android:textSize="50px"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>


        <TextView
            android:id="@+id/btn_remote_recovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_favorite_remote_recovery"
            android:textSize="45px"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30px"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

   <TextView
       android:id="@+id/tv_username"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/l_remote_recovery"
       android:text="Freedom"
       android:textSize="40px"
       android:textColor="@color/barColor"
       android:layout_marginTop="50px"
       android:layout_centerHorizontal="true"/>

    <View
        android:id="@+id/v_1"
        android:layout_width="450px"
        android:layout_height="1dp"
        android:layout_below="@id/tv_username"
        android:background="@color/barColor"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30px"/>



</RelativeLayout>